quark/test/quark/AST/Errors/typeAlreadyDeclared-001.qk
// RUN: not quark --emit-ast "%s" 2>&1 | FileCheck "%s"

type Vehicle {}
type Vehicle {}

// CHECK:Error: type 'Vehicle' already defined!
